2006-07-03  Gabriel Burt  <gabriel.burt@gmail.com>

	* plugins/SmartPlaylists/Plugin.cs: For some reason we can no longer add
	things to the main menu on Initialization, so delay it until the UI is
	initialized.

2006-07-02  Gabriel Burt  <gabriel.burt@gmail.com>

	* plugins/Podcast/PodcastCore.cs: Fixed typo (from P. van de Geer)

	* plugins/SmartPlaylists/SmartPlaylist.cs: Should be GenericName not
	SourceType.

2006-06-14  Gabriel Burt  <gabriel.burt@gmail.com>

	* plugins/SmartPlaylists/QueryBuilderModel.cs: Compensate for strange
	date/time foo in Banshee to make time-dependent smart playlists actually
	work.

	* plugins/SmartPlaylists/Plugin.cs: Start a timer that automatically
	refreshes time-dependent smart playlists every minute. (BGO #344719).
	Make smart playlists children of the Music Library (BGO #344723).

	* plugins/SmartPlaylists/Editor.cs: Check if the timer is needed after
	creating/editing smart playlists.  Make playlists children of the Library.

	* plugins/SmartPlaylists/SmartPlaylist.cs: Subclass from ChildSource not
	Source.  Add TimeDependent property.

2006-06-13  Aaron Bockover  <aaron@abock.org>

	* plugins/Radio/RadioSource.cs: Create user plugin directory if it 
	does not exist (Todd Zullinger, BGO #344725)

2006-06-02  Fredrik Hedberg  <fredrik@avafan.com>

	* plugins/Recommendation/RecommendationPane.cs: Fix the url-hashing.

2006-05-25  Lukas Lipka  <lukas@pmad.net>

	* plugins/Recommendation/RecommendationPane.cs: Commit a patch from Koike
	Kazuhiko, which checks if we are still playing the same artist as we requested,
	prior to displaying the details pane.

2006-05-24  Aaron Bockover  <aaron@abock.org>

	* plugins/MiniMode/MiniModeWindow.cs: Catch any possible exception
	that GConf may throw and set a sane default value

2006-05-24  Lukas Lipka  <lukas@pmad.net>

	* plugins/Recommendation/RecommendationPlugin.cs: Fix more glitches related
	to source focus tracking. Move stuff around.
